[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://vr_offices/ui/DialogueOverlay.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.06, 0.07, 0.08, 0.92)
border_color = Color(1, 1, 1, 0.08)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_left = 14
corner_radius_bottom_right = 14
content_margin_left = 14
content_margin_top = 14
content_margin_right = 14
content_margin_bottom = 14

[node name="DialogueOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
color = Color(0, 0, 0, 0.35)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 0
anchors_preset = 10
anchor_left = 0.05
anchor_top = 0.55
anchor_right = 0.95
anchor_bottom = 0.98
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Header" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "NPC"

[node name="CloseButton" type="Button" parent="Panel/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[node name="Scroll" type="ScrollContainer" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Messages" type="VBoxContainer" parent="Panel/VBox/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Footer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Input" type="LineEdit" parent="Panel/VBox/Footer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type a messageâ€¦"

[node name="SendButton" type="Button" parent="Panel/VBox/Footer"]
unique_name_in_owner = true
layout_mode = 2
text = "Send"
